--- a/ui/src/components/Details/components/Game.css
+++ b/ui/src/components/Details/components/Game.css
@@ -55,6 +55,7 @@
 .game-info {
     min-width: 0;
 }
+
 .info-button {
   font-family: 'Open Sans', sans-serif;
   border: none;
@@ -69,5 +70,5 @@
 }
 
 .info-button:hover {
-  background: #2977d6;
+  background: #1c80fa;
 }
