--- a/ui/src/components/Modal/Modal.css
+++ b/ui/src/components/Modal/Modal.css
@@ -54,7 +54,7 @@
   display: flex;
   flex: 1;
   max-height: 100%;
-  min-height: 400px;
+  min-height: 350px;
   flex-direction: column;
   z-index: 901;
 }
@@ -91,10 +91,13 @@
   background: #0d1d30;
   margin-bottom: -1px;
   flex: 0 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 .modal-title {
   font-size: 22px;
+  margin-right: auto;
 }
 
 .modal-body {
@@ -102,11 +105,13 @@
   background: #0d1d30;
   flex: 1 1 auto;
   height: 100%;
+  padding: 0px 25px;
+  padding-top: 10px;
+  padding-bottom: 25px;
 }
 
 .modal-body-content {
-  padding: 0px 25px;
-  padding-top: 10px;
+
   display: flex;
 }
 
@@ -135,7 +140,7 @@
 
 .modal-close {
   position: absolute;
-  top: 25px;
+  top: 27px;
   right: 25px;
   opacity: 0.3;
   cursor: pointer;
