--- a/ui/src/components/Home/Home.css
+++ b/ui/src/components/Home/Home.css
@@ -3,13 +3,17 @@
   padding-top: 30vh;
 }
 
+#profile-input {
+  flex-grow: 1;
+  max-width: 600px;
+}
+
 .input {
   font-size: 22px;
   padding: 14px;
   border-radius: 5px 0 0 5px;
   border: none;
   outline: none;
-  min-width: 600px;
 }
 
 .input-form {
@@ -39,46 +43,23 @@
 }
 
 .submit-button:hover {
-    background: #2977d6;
+  background: #2977d6;
+}
+
+@media (max-width: 700px) {
+  .input {
+    font-size: 18px;
+    padding: 12px;
   }
 
-.spinner {
-  width: 20px;
-  height: 20px;
+  #profile-input {
+    max-width: 100vw;
+    font-size: 18px;
+  }
 
-  position: relative;
-}
-
-.double-bounce1, .double-bounce2 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: rgb(218, 218, 218);
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
-  
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-  animation: sk-bounce 2.0s infinite ease-in-out;
-}
-
-.double-bounce2 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
-}
-
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes sk-bounce {
-  0%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
+  .submit-button {
+    font-size: 18px;
+    padding: 12px;
+    height: 46px;
   }
 }
