--- a/ui/src/components/Modal/Modal.css
+++ b/ui/src/components/Modal/Modal.css
@@ -47,7 +47,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 800px;
+  max-width: 100vw;
   margin: auto;
   outline: none;
   opacity: 1;
